<resources>
    <string name="app_name">"Top 10 "</string>
    <string name="action_settings">Settings</string>
    <string name="download_failed">Couldn\'t download feeds</string>
    <string name="title_activity_feed_detail">Details</string>
    <string name="feed_title_text">Title : %s</string>
    <string name="feed_artist_text">Artist : %s</string>
    <string name="feed_summary_text">Summary : %s</string>
    <string name="app_image">App Image</string>
    <string name="free_apps">Free Apps</string>
    <string name="paid_apps">Paid Apps</string>
    <string name="top25">Top 25</string>
    <string name="top50">Top 50</string>
    <string name="refresh">Refresh</string>

</resources>
